--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "pages/searchbar/searchbar",
     "pages/tableData/datapages/annualplan/annualplan",
     "pages/project/projectInfo/projectInfo",
-    "pages/control/dcdb/dcdb"
+    "pages/control/dcdb/dcdb",
+    "pages/control/dcdb/details/details"
   ],
   "window": {
     "backgroundTextStyle": "dark",
