--- a/project.config.json
+++ b/project.config.json
@@ -30,7 +30,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.11.2",
-	"appid": "wx2dea9f74dd2f93cf",
+	"appid": "wx6a478f1a9bd41e1c",
 	"projectname": "jk-gcgl-wx",
 	"debugOptions": {
 		"hidedInDevtools": []
