--- a/app.json
+++ b/app.json
@@ -13,6 +13,13 @@
     "pages/control/dcdb/details/details",
     "pages/control/dcdb/add/add",
     "pages/tableData/datapages/tzwj/tzwj",
+    "pages/tableData/datapages/zjjk/zjjk",
+    "pages/tableData/datapages/sjtj/sjtj",
+    "pages/tableData/datapages/sjtj/gcbb/gcbb",
+    "pages/tableData/datapages/sjtj/ztqkb/ztqkb",
+    "pages/tableData/datapages/sjtj/jjjszbb/jjjszbb",
+    "pages/tableData/datapages/sjtj/jsjdb/jsjdb",
+    "pages/tableData/datapages/sjtj/xmfxt/xmfxt",
     "pages/tableData/datapages/tzwj/jzsgt/jzsgt",
     "pages/tableData/datapages/tzwj/jgsgt/jgsgt",
     "pages/tableData/datapages/tzwj/tsbb/tsbb",
