--- a/project.config.json
+++ b/project.config.json
@@ -30,7 +30,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.1",
-	"appid": "wxdb66f0dc44743747",
+	"appid": "wx6a478f1a9bd41e1c",
 	"projectname": "jk-gcgl",
 	"cloudfunctionTemplateRoot": "",
 	"watchOptions": {
