--- a/project.config.json
+++ b/project.config.json
@@ -18,19 +18,19 @@
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
 		"uploadWithSourceMap": true,
+		"compileHotReLoad": false,
 		"babelSetting": {
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
 		},
+		"useIsolateContext": true,
 		"useCompilerModule": false,
-		"userConfirmedUseCompilerModuleSwitch": false,
-		"compileHotReLoad": false,
-		"useIsolateContext": true
+		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.12.1",
-	"appid": "wx6a478f1a9bd41e1c",
+	"appid": "wxdb66f0dc44743747",
 	"projectname": "jk-gcgl",
 	"cloudfunctionTemplateRoot": "",
 	"watchOptions": {
