--- a/app.json
+++ b/app.json
@@ -12,6 +12,14 @@
     "pages/control/dcdb/dcdb",
     "pages/control/dcdb/details/details",
     "pages/control/dcdb/add/add",
+    "pages/control/txjdxx/txjdxx",
+    "pages/control/tjaqjc/tjaqjc",
+    "pages/control/tjzljc/tjzljc",
+    "pages/control/tjdbsx/tjdbsx",
+    "pages/control/tjqzsp/tjqzsp",
+    "pages/control/tjhtgl/tjhtgl",
+    "pages/control/tjtzwj/tjtzwj",
+    "pages/control/tjtptx/tjtptx",
     "pages/tableData/datapages/tzwj/tzwj",
     "pages/tableData/datapages/zjjk/zjjk",
     "pages/tableData/datapages/sjtj/sjtj",
