--- a/app.json
+++ b/app.json
@@ -17,6 +17,13 @@
     "pages/control/tjtptx/gylh/ptyf/ptyf",
     "pages/control/tjtptx/gylh/lcgc/lcgc",
     "pages/control/tjtptx/gylh/yqgc/yqgc",
+    "pages/control/tjtptx/gylh/yqgc/dxzx/dxzx",
+    "pages/control/tjtptx/gylh/yqgc/jps/jps",
+    "pages/control/tjtptx/gylh/yqgc/lhzz/lhzz",
+    "pages/control/tjtptx/gylh/yqgc/jgxp/jgxp",
+    "pages/control/tjtptx/gylh/yqgc/ldzm/ldzm",
+    "pages/control/tjtptx/gylh/yqgc/jkzn/jkzn",
+    "pages/control/tjtptx/gylh/yqgc/lxgc/lxgc",
     "pages/searchbar/searchbar",
     "pages/tableData/datapages/annualplan/annualplan",
     "pages/project/projectInfo/projectInfo",
