--- a/app.json
+++ b/app.json
@@ -16,6 +16,13 @@
     "pages/control/tjtptx/gylh/whjg/whjg",
     "pages/control/tjtptx/gylh/ptyf/ptyf",
     "pages/control/tjtptx/gylh/lcgc/lcgc",
+    "pages/control/tjtptx/gylh/lcgc/tfgc/tfgc",
+    "pages/control/tjtptx/gylh/lcgc/ylzx/ylzx",
+    "pages/control/tjtptx/gylh/lcgc/ylpz/ylpz",
+    "pages/control/tjtptx/gylh/lcgc/dlzx/dlzx",
+    "pages/control/tjtptx/gylh/lcgc/dlyh/dlyh",
+    "pages/control/tjtptx/gylh/lcgc/tcczx/tcczx",
+    "pages/control/tjtptx/gylh/lcgc/tccpz/tccpz",
     "pages/control/tjtptx/gylh/yqgc/yqgc",
     "pages/control/tjtptx/gylh/yqgc/dxzx/dxzx",
     "pages/control/tjtptx/gylh/yqgc/jps/jps",
