--- a/app.json
+++ b/app.json
@@ -14,7 +14,21 @@
     "pages/control/tjtptx/szql/jpsgc/jpsgc",
     "pages/control/tjtptx/gylh/gylh",
     "pages/control/tjtptx/gylh/whjg/whjg",
+    "pages/control/tjtptx/gylh/whjg/sxzl/sxzl",
+    "pages/control/tjtptx/gylh/whjg/mzd/mzd",
+    "pages/control/tjtptx/gylh/whjg/jgq/jgq",
+    "pages/control/tjtptx/gylh/whjg/ysxp/ysxp",
+    "pages/control/tjtptx/gylh/whjg/whds/whds",
+    "pages/control/tjtptx/gylh/whjg/mhkh/mhkh",
+    "pages/control/tjtptx/gylh/whjg/ytbz/ytbz",
     "pages/control/tjtptx/gylh/ptyf/ptyf",
+    "pages/control/tjtptx/gylh/ptyf/tfgc/tfgc",
+    "pages/control/tjtptx/gylh/ptyf/jcgc/jcgc",
+    "pages/control/tjtptx/gylh/ptyf/ztgc/ztgc",
+    "pages/control/tjtptx/gylh/ptyf/zszx/zszx",
+    "pages/control/tjtptx/gylh/ptyf/gsgd/gsgd",
+    "pages/control/tjtptx/gylh/ptyf/pspw/pspw",
+    "pages/control/tjtptx/gylh/ptyf/lxgc/lxgc",
     "pages/control/tjtptx/gylh/lcgc/lcgc",
     "pages/control/tjtptx/gylh/lcgc/tfgc/tfgc",
     "pages/control/tjtptx/gylh/lcgc/ylzx/ylzx",
