--- a/app.json
+++ b/app.json
@@ -7,72 +7,6 @@
     "pages/self/self",
     "pages/self/info/info",
     "pages/control/control",
-    "pages/control/tjtptx/szql/szql",
-    "pages/control/tjtptx/szql/ptgc/ptgc",
-    "pages/control/tjtptx/szql/ptgc/rxdgc/rxdgc",
-    "pages/control/tjtptx/szql/ptgc/lhgc/lhgc",
-    "pages/control/tjtptx/szql/ptgc/lvhgc/lvhgc",
-    "pages/control/tjtptx/szql/ptgc/bsbp/bsbp",
-    "pages/control/tjtptx/szql/ptgc/jtxhd/jtxhd",
-    "pages/control/tjtptx/szql/ptgc/bpcl/bpcl",
-    "pages/control/tjtptx/szql/ptgc/lxgc/lxgc",
-    "pages/control/tjtptx/szql/qhgc/qhgc",
-    "pages/control/tjtptx/szql/qhgc/tfgc/tfgc",
-    "pages/control/tjtptx/szql/qhgc/zhgc/zhgc",
-    "pages/control/tjtptx/szql/qhgc/jcgc/jcgc",
-    "pages/control/tjtptx/szql/qhgc/qtgc/qtgc",
-    "pages/control/tjtptx/szql/qhgc/qlgc/qlgc",
-    "pages/control/tjtptx/szql/qhgc/qmgc/qmgc",
-    "pages/control/tjtptx/szql/qhgc/zsgc/zsgc",
-    "pages/control/tjtptx/szql/dlgc/dlgc",
-    "pages/control/tjtptx/szql/dlgc/tfgc/tfgc",
-    "pages/control/tjtptx/szql/dlgc/ljcl/ljcl",
-    "pages/control/tjtptx/szql/dlgc/ljgc/ljgc",
-    "pages/control/tjtptx/szql/dlgc/jcjaz/jcjaz",
-    "pages/control/tjtptx/szql/dlgc/ywsg/ywsg",
-    "pages/control/tjtptx/szql/dlgc/jgjc/jgjc",
-    "pages/control/tjtptx/szql/dlgc/jgmc/jgmc",
-    "pages/control/tjtptx/szql/jpsgc/jpsgc",
-    "pages/control/tjtptx/szql/jpsgc/tfgc/tfgc",
-    "pages/control/tjtptx/szql/jpsgc/gckw/gckw",
-    "pages/control/tjtptx/szql/jpsgc/jcdc/jcdc",
-    "pages/control/tjtptx/szql/jpsgc/gdaz/gdaz",
-    "pages/control/tjtptx/szql/jpsgc/gdbf/gdbf",
-    "pages/control/tjtptx/szql/jpsgc/gdts/gdts",
-    "pages/control/tjtptx/szql/jpsgc/gdtt/gdtt",
-    "pages/control/tjtptx/gylh/gylh",
-    "pages/control/tjtptx/gylh/whjg/whjg",
-    "pages/control/tjtptx/gylh/whjg/sxzl/sxzl",
-    "pages/control/tjtptx/gylh/whjg/mzd/mzd",
-    "pages/control/tjtptx/gylh/whjg/jgq/jgq",
-    "pages/control/tjtptx/gylh/whjg/ysxp/ysxp",
-    "pages/control/tjtptx/gylh/whjg/whds/whds",
-    "pages/control/tjtptx/gylh/whjg/mhkh/mhkh",
-    "pages/control/tjtptx/gylh/whjg/ytbz/ytbz",
-    "pages/control/tjtptx/gylh/ptyf/ptyf",
-    "pages/control/tjtptx/gylh/ptyf/tfgc/tfgc",
-    "pages/control/tjtptx/gylh/ptyf/jcgc/jcgc",
-    "pages/control/tjtptx/gylh/ptyf/ztgc/ztgc",
-    "pages/control/tjtptx/gylh/ptyf/zszx/zszx",
-    "pages/control/tjtptx/gylh/ptyf/gsgd/gsgd",
-    "pages/control/tjtptx/gylh/ptyf/pspw/pspw",
-    "pages/control/tjtptx/gylh/ptyf/lxgc/lxgc",
-    "pages/control/tjtptx/gylh/lcgc/lcgc",
-    "pages/control/tjtptx/gylh/lcgc/tfgc/tfgc",
-    "pages/control/tjtptx/gylh/lcgc/ylzx/ylzx",
-    "pages/control/tjtptx/gylh/lcgc/ylpz/ylpz",
-    "pages/control/tjtptx/gylh/lcgc/dlzx/dlzx",
-    "pages/control/tjtptx/gylh/lcgc/dlyh/dlyh",
-    "pages/control/tjtptx/gylh/lcgc/tcczx/tcczx",
-    "pages/control/tjtptx/gylh/lcgc/tccpz/tccpz",
-    "pages/control/tjtptx/gylh/yqgc/yqgc",
-    "pages/control/tjtptx/gylh/yqgc/dxzx/dxzx",
-    "pages/control/tjtptx/gylh/yqgc/jps/jps",
-    "pages/control/tjtptx/gylh/yqgc/lhzz/lhzz",
-    "pages/control/tjtptx/gylh/yqgc/jgxp/jgxp",
-    "pages/control/tjtptx/gylh/yqgc/ldzm/ldzm",
-    "pages/control/tjtptx/gylh/yqgc/jkzn/jkzn",
-    "pages/control/tjtptx/gylh/yqgc/lxgc/lxgc",
     "pages/searchbar/searchbar",
     "pages/tableData/datapages/annualplan/annualplan",
     "pages/project/projectInfo/projectInfo",
@@ -86,7 +20,6 @@
     "pages/control/tjqzsp/tjqzsp",
     "pages/control/tjhtgl/tjhtgl",
     "pages/control/tjtzwj/tjtzwj",
-    "pages/control/tjtptx/tjtptx",
     "pages/tableData/datapages/tzwj/tzwj",
     "pages/tableData/datapages/zjjk/zjjk",
     "pages/tableData/datapages/sjtj/sjtj",
@@ -159,5 +92,79 @@
       }
     ]
   },
+  "subPackages": [
+    {
+      "root": "pages/control/tjtptx/",
+      "pages": [
+        "tjtptx",
+        "szql/szql",
+        "szql/ptgc/ptgc",
+        "szql/ptgc/rxdgc/rxdgc",
+        "szql/ptgc/lhgc/lhgc",
+        "szql/ptgc/lvhgc/lvhgc",
+        "szql/ptgc/bsbp/bsbp",
+        "szql/ptgc/jtxhd/jtxhd",
+        "szql/ptgc/bpcl/bpcl",
+        "szql/ptgc/lxgc/lxgc",
+        "szql/qhgc/qhgc",
+        "szql/qhgc/tfgc/tfgc",
+        "szql/qhgc/zhgc/zhgc",
+        "szql/qhgc/jcgc/jcgc",
+        "szql/qhgc/qtgc/qtgc",
+        "szql/qhgc/qlgc/qlgc",
+        "szql/qhgc/qmgc/qmgc",
+        "szql/qhgc/zsgc/zsgc",
+        "szql/dlgc/dlgc",
+        "szql/dlgc/tfgc/tfgc",
+        "szql/dlgc/ljcl/ljcl",
+        "szql/dlgc/ljgc/ljgc",
+        "szql/dlgc/jcjaz/jcjaz",
+        "szql/dlgc/ywsg/ywsg",
+        "szql/dlgc/jgjc/jgjc",
+        "szql/dlgc/jgmc/jgmc",
+        "szql/jpsgc/jpsgc",
+        "szql/jpsgc/tfgc/tfgc",
+        "szql/jpsgc/gckw/gckw",
+        "szql/jpsgc/jcdc/jcdc",
+        "szql/jpsgc/gdaz/gdaz",
+        "szql/jpsgc/gdbf/gdbf",
+        "szql/jpsgc/gdts/gdts",
+        "szql/jpsgc/gdtt/gdtt",
+        "gylh/gylh",
+        "gylh/whjg/whjg",
+        "gylh/whjg/sxzl/sxzl",
+        "gylh/whjg/mzd/mzd",
+        "gylh/whjg/jgq/jgq",
+        "gylh/whjg/ysxp/ysxp",
+        "gylh/whjg/whds/whds",
+        "gylh/whjg/mhkh/mhkh",
+        "gylh/whjg/ytbz/ytbz",
+        "gylh/ptyf/ptyf",
+        "gylh/ptyf/tfgc/tfgc",
+        "gylh/ptyf/jcgc/jcgc",
+        "gylh/ptyf/ztgc/ztgc",
+        "gylh/ptyf/zszx/zszx",
+        "gylh/ptyf/gsgd/gsgd",
+        "gylh/ptyf/pspw/pspw",
+        "gylh/ptyf/lxgc/lxgc",
+        "gylh/lcgc/lcgc",
+        "gylh/lcgc/tfgc/tfgc",
+        "gylh/lcgc/ylzx/ylzx",
+        "gylh/lcgc/ylpz/ylpz",
+        "gylh/lcgc/dlzx/dlzx",
+        "gylh/lcgc/dlyh/dlyh",
+        "gylh/lcgc/tcczx/tcczx",
+        "gylh/lcgc/tccpz/tccpz",
+        "gylh/yqgc/yqgc",
+        "gylh/yqgc/dxzx/dxzx",
+        "gylh/yqgc/jps/jps",
+        "gylh/yqgc/lhzz/lhzz",
+        "gylh/yqgc/jgxp/jgxp",
+        "gylh/yqgc/ldzm/ldzm",
+        "gylh/yqgc/jkzn/jkzn",
+        "gylh/yqgc/lxgc/lxgc"
+      ]
+    }
+  ],
   "sitemapLocation": "sitemap.json"
 }
