--- a/pages/project/project.json
+++ b/pages/project/project.json
@@ -1,5 +1,6 @@
 {
   "usingComponents": {},
   "navigationBarTitleText": "项目库",
-  "onReachBottomDistance": 50
+  "onReachBottomDistance": 50,
+  "enablePullDownRefresh": true
 }
