--- a/app.json
+++ b/app.json
@@ -35,6 +35,11 @@
     "pages/tableData/datapages/htgl/sght/sght",
     "pages/tableData/datapages/htgl/jlht/jlht",
     "pages/tableData/datapages/tptx/tptx",
+    "pages/tableData/datapages/tptx/fjl/fjl",
+    "pages/tableData/datapages/tptx/fjl/dxsgc/dxsgc",
+    "pages/tableData/datapages/tptx/fjl/ztgc/ztgc",
+    "pages/tableData/datapages/tptx/fjl/zszxgc/zszxgc",
+    "pages/tableData/datapages/tptx/fjl/ptgc/ptgc",
     "pages/tableData/datapages/tptx/gylh/gylh",
     "pages/tableData/datapages/tptx/gylh/yqgc/yqgc",
     "pages/tableData/datapages/tptx/gylh/lcgc/lcgc",
