--- a/pages/project/project.json
+++ b/pages/project/project.json
@@ -8,7 +8,9 @@
     "van-dropdown-menu": "@vant/weapp/dropdown-menu/index",
     "van-dropdown-item": "@vant/weapp/dropdown-item/index",
     "van-progress": "@vant/weapp/progress/index",
-    "van-icon": "@vant/weapp/icon/index"
+    "van-icon": "@vant/weapp/icon/index",
+    "van-grid": "@vant/weapp/grid/index",
+    "van-grid-item": "@vant/weapp/grid-item/index"
 
   },
   "navigationBarTitleText": "项目库",
