--- a/app.json
+++ b/app.json
@@ -109,74 +109,7 @@
     {
       "root": "pages/control/tjtptx/",
       "pages": [
-        "tjtptx",
-        "fjl/fjl",
-        "szql/szql",
-        "szql/ptgc/ptgc",
-        "szql/ptgc/rxdgc/rxdgc",
-        "szql/ptgc/lhgc/lhgc",
-        "szql/ptgc/lvhgc/lvhgc",
-        "szql/ptgc/bsbp/bsbp",
-        "szql/ptgc/jtxhd/jtxhd",
-        "szql/ptgc/bpcl/bpcl",
-        "szql/ptgc/lxgc/lxgc",
-        "szql/qhgc/qhgc",
-        "szql/qhgc/tfgc/tfgc",
-        "szql/qhgc/zhgc/zhgc",
-        "szql/qhgc/jcgc/jcgc",
-        "szql/qhgc/qtgc/qtgc",
-        "szql/qhgc/qlgc/qlgc",
-        "szql/qhgc/qmgc/qmgc",
-        "szql/qhgc/zsgc/zsgc",
-        "szql/dlgc/dlgc",
-        "szql/dlgc/tfgc/tfgc",
-        "szql/dlgc/ljcl/ljcl",
-        "szql/dlgc/ljgc/ljgc",
-        "szql/dlgc/jcjaz/jcjaz",
-        "szql/dlgc/ywsg/ywsg",
-        "szql/dlgc/jgjc/jgjc",
-        "szql/dlgc/jgmc/jgmc",
-        "szql/jpsgc/jpsgc",
-        "szql/jpsgc/tfgc/tfgc",
-        "szql/jpsgc/gckw/gckw",
-        "szql/jpsgc/jcdc/jcdc",
-        "szql/jpsgc/gdaz/gdaz",
-        "szql/jpsgc/gdbf/gdbf",
-        "szql/jpsgc/gdts/gdts",
-        "szql/jpsgc/gdtt/gdtt",
-        "gylh/gylh",
-        "gylh/whjg/whjg",
-        "gylh/whjg/sxzl/sxzl",
-        "gylh/whjg/mzd/mzd",
-        "gylh/whjg/jgq/jgq",
-        "gylh/whjg/ysxp/ysxp",
-        "gylh/whjg/whds/whds",
-        "gylh/whjg/mhkh/mhkh",
-        "gylh/whjg/ytbz/ytbz",
-        "gylh/ptyf/ptyf",
-        "gylh/ptyf/tfgc/tfgc",
-        "gylh/ptyf/jcgc/jcgc",
-        "gylh/ptyf/ztgc/ztgc",
-        "gylh/ptyf/zszx/zszx",
-        "gylh/ptyf/gsgd/gsgd",
-        "gylh/ptyf/pspw/pspw",
-        "gylh/ptyf/lxgc/lxgc",
-        "gylh/lcgc/lcgc",
-        "gylh/lcgc/tfgc/tfgc",
-        "gylh/lcgc/ylzx/ylzx",
-        "gylh/lcgc/ylpz/ylpz",
-        "gylh/lcgc/dlzx/dlzx",
-        "gylh/lcgc/dlyh/dlyh",
-        "gylh/lcgc/tcczx/tcczx",
-        "gylh/lcgc/tccpz/tccpz",
-        "gylh/yqgc/yqgc",
-        "gylh/yqgc/dxzx/dxzx",
-        "gylh/yqgc/jps/jps",
-        "gylh/yqgc/lhzz/lhzz",
-        "gylh/yqgc/jgxp/jgxp",
-        "gylh/yqgc/ldzm/ldzm",
-        "gylh/yqgc/jkzn/jkzn",
-        "gylh/yqgc/lxgc/lxgc"
+        "tjtptx"
       ]
     }
   ],
