--- a/pages/control/txxmxx/txPlanSchedule/txProjectPlan/txProjectPlan.json
+++ b/pages/control/txxmxx/txPlanSchedule/txProjectPlan/txProjectPlan.json
@@ -9,6 +9,7 @@
     "van-col": "@vant/weapp/col/index",
     "van-tab": "@vant/weapp/tab/index",
     "van-tabs": "@vant/weapp/tabs/index",
-    "van-loading": "@vant/weapp/loading/index"
+    "van-loading": "@vant/weapp/loading/index",
+    "van-toast": "@vant/weapp/toast/index"
   }
 }
