--- a/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.json
+++ b/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.json
@@ -1,5 +1,7 @@
 {
   "usingComponents": {
+    "van-tabbar": "@vant/weapp/tabbar/index",
+    "van-tabbar-item": "@vant/weapp/tabbar-item/index",
     "van-collapse": "@vant/weapp/collapse/index",
     "van-collapse-item": "@vant/weapp/collapse-item/index",
     "van-field": "@vant/weapp/field/index",
@@ -9,6 +11,8 @@
     "van-col": "@vant/weapp/col/index",
     "van-tab": "@vant/weapp/tab/index",
     "van-tabs": "@vant/weapp/tabs/index",
-    "van-loading": "@vant/weapp/loading/index"
-  }
+    "van-loading": "@vant/weapp/loading/index",
+    "van-toast": "@vant/weapp/toast/index"
+  },
+  "navigationBarTitleText": "进度信息"
 }
