--- a/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.json
+++ b/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.json
@@ -12,7 +12,9 @@
     "van-tab": "@vant/weapp/tab/index",
     "van-tabs": "@vant/weapp/tabs/index",
     "van-loading": "@vant/weapp/loading/index",
-    "van-toast": "@vant/weapp/toast/index"
+    "van-toast": "@vant/weapp/toast/index",
+    "van-popup": "@vant/weapp/popup/index",
+    "van-button": "@vant/weapp/button/index"
   },
   "navigationBarTitleText": "进度信息"
 }
