--- a/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.json
+++ b/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.json
@@ -14,7 +14,8 @@
     "van-loading": "@vant/weapp/loading/index",
     "van-toast": "@vant/weapp/toast/index",
     "van-popup": "@vant/weapp/popup/index",
-    "van-button": "@vant/weapp/button/index"
+    "van-button": "@vant/weapp/button/index",
+    "van-icon": "@vant/weapp/icon/index"
   },
   "navigationBarTitleText": "进度信息"
 }
