--- a/pages/project/project.json
+++ b/pages/project/project.json
@@ -10,8 +10,8 @@
     "van-progress": "@vant/weapp/progress/index",
     "van-icon": "@vant/weapp/icon/index",
     "van-grid": "@vant/weapp/grid/index",
-    "van-grid-item": "@vant/weapp/grid-item/index"
-
+    "van-grid-item": "@vant/weapp/grid-item/index",
+    "van-toast": "@vant/weapp/toast/index"
   },
   "navigationBarTitleText": "项目库",
   "onReachBottomDistance": 50,
