--- a/pages/project/project.json
+++ b/pages/project/project.json
@@ -1,6 +1,5 @@
 {
   "usingComponents": {
-    "myMask": "/components/mask/myMask",
     "limitPage": "/components/limitPage/limitPage",
     "van-card": "@vant/weapp/card/index",
     "van-image": "@vant/weapp/image/index",
@@ -11,7 +10,8 @@
     "van-icon": "@vant/weapp/icon/index",
     "van-grid": "@vant/weapp/grid/index",
     "van-grid-item": "@vant/weapp/grid-item/index",
-    "van-toast": "@vant/weapp/toast/index"
+    "van-toast": "@vant/weapp/toast/index",
+    "van-empty": "@vant/weapp/empty/index"
   },
   "navigationBarTitleText": "项目库",
   "onReachBottomDistance": 50,
